Fix alignment of 'About this board' icon

--- a/modules/styles/board/header.less
+++ b/modules/styles/board/header.less
@@ -42,6 +42,7 @@ div#content h2.flow-board-header-title {
 
 	> .mw-ui-icon {
 		font-size: 1 / 1.15em;
+		vertical-align: middle;
 	}
 }
 /* stylelint-enable selector-max-id */
